# chat-bot

./: .env.example  .gitignore  app.py  pyproject.toml  render.yaml
frontend/: index.html  main.js  package-lock.json  package.json  style.css
frontend/src/: App.vue
frontend/src/assets/: base.css
